# newrelic-mcp

./: pyproject.toml
