[project]
name = "newrelic-mcp"
version = "0.1.0"
description = "MCP server to execute New Relic NRQL queries via NerdGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
newrelic-mcp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py", "server.py"]

[tool.hatch.build]
dev-mode-dirs = ["."]
